Railway 배포 준비